--- a/index.html
+++ b/index.html
@@ -16,6 +16,41 @@
             y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
         })(window, document, "clarity", "script", "i4u605tz2t");
     </script>
+
+
+
+
+<style>
+
+
+        .containerMain {
+            display: flex;
+            max-width: 800px;
+            margin: 50px auto;
+          /*  background-color: #f0f0f0;*/
+            padding: 20px;
+        }
+
+
+        .text-box {
+            flex: 1;
+            padding-right: 20px;
+        }
+
+
+        .image-box {
+            flex: 1;
+            text-align: center;
+        }
+
+        .image-box img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+    </style>
+
+
 </head>
 
 <body>
@@ -34,6 +69,7 @@
                 <i class="fa-solid fa-bars" onclick="openmemu()"></i>
             </nav>
             <div class="header-text animated animatedFadeInUp fadeInUp">
+              <!--
                 <p>Welcome stuff about SOAR</p>
                 <p>Welcome stuff about SOAR</p>
                 <p>Welcome stuff about SOAR</p>
@@ -42,6 +78,21 @@
                 <p>Welcome stuff about SOAR</p>
                 <p>Welcome stuff about SOAR</p>
                 <p>Welcome stuff about SOAR</p>
+-->
+
+
+
+<div class="containerMain">
+        <div class="text-box">
+<!--            <h2>Left Box with Text</h2>-->
+            <p>Welcome to SOAR Intelligent Solutions.</p>
+        </div>
+        <div class="image-box">
+            <img src="images/Blackhawk.jpeg" alt="SOAR Blackhawk">
+        </div>
+    </div>
+
+
             </div>
         </div>
     </div>
