--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+- Add Google Analytics
+- White background, black text
+- Fix paragraph spacing
+- Add Dan/Ag bios
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
