--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!--
-- Add Google Analytics
-- White background, black text
+- Register domain
 - Fix paragraph spacing
 - Add Dan/Ag bios
 -->
@@ -9,6 +8,22 @@
 <html lang="en">
 
 <head>
+
+<!--- START GOOGLE ANALYTICS -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RZM5G0ZKJC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RZM5G0ZKJC');
+</script>
+<!--- END GOOGLE ANALYTICS -->
+
+
+
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -149,35 +164,34 @@
 <h2>Chris Durkin: CEO</h2>
 
 
-<img src="https://media.newyorker.com/photos/59095bb86552fa0be682d9d0/master/w_2240,c_limit/Monkey-Selfie.jpg" alt="Monkey" width="200" height="300">
+<img src="images/chris.png" alt="Chris Durkin" width="200" height="300">
 
-<p>Mr. Durkin served as the Washington, D.C. Strategic National Stockpile (SNS) Coordinator where he was responsible for developing a strategy to dispense emergency medication to the District of Columbia's more than one million residents and guests within 48 hours should a bioterrorism event occur involving anthrax or other lethal agents.</p><br />
+<p>Mr. Durkin served as the Washington, D.C. Strategic National Stockpile (SNS) Coordinator where he was responsible for developing a strategy to dispense emergency medication to the District of Columbia's more than one million residents and guests within 48 hours should a bioterrorism event occur involving anthrax or other lethal agents.</p>
   
-<p>In the private sector, Mr. Durkin was a senior emergency management consultant specializing in traditional and public health emergency and disaster prevention, mitigation, preparedness, response and recovery. While working closely with a wide array of clients, he conducted hazard vulnerability assessments (HVA), culture and climate surveys, Clery reviews, emergency plan review, emergency plan development risk assessments and developed Comprehensive Emergency Management Programs (CEMP). He also validated policies, plans and procedures using HSEEP compliant discussion and operations-based exercises.</p><br />
+<p>In the private sector, Mr. Durkin was a senior emergency management consultant specializing in traditional and public health emergency and disaster prevention, mitigation, preparedness, response and recovery. While working closely with a wide array of clients, he conducted hazard vulnerability assessments (HVA), culture and climate surveys, Clery reviews, emergency plan review, emergency plan development risk assessments and developed Comprehensive Emergency Management Programs (CEMP). He also validated policies, plans and procedures using HSEEP compliant discussion and operations-based exercises.</p>
 
-<p>Before that, he was the SNS Coordinator and Public Health Emergency Operations and Plans Officer for the Monroe County Department of Health in New York. He supervised a staff of preparedness specialists and provided leadership during the development of the Civil Preparedness Initiative (CPI), which teamed the Department of Health with all municipalities in Monroe County, including the City of Rochester. During this period, he oversaw numerous tabletop, functional and full-scale exercises. Additionally, Mr. Durkin was co-chair of the Community of Monroe Citizen Corps Council, he developed the Monroe County Community Emergency Response Team (CERT) Program, and he created the Department of Public Health's Medical Reserve Corps. </p><br />
+<p>Before that, he was the SNS Coordinator and Public Health Emergency Operations and Plans Officer for the Monroe County Department of Health in New York. He supervised a staff of preparedness specialists and provided leadership during the development of the Civil Preparedness Initiative (CPI), which teamed the Department of Health with all municipalities in Monroe County, including the City of Rochester. During this period, he oversaw numerous tabletop, functional and full-scale exercises. Additionally, Mr. Durkin was co-chair of the Community of Monroe Citizen Corps Council, he developed the Monroe County Community Emergency Response Team (CERT) Program, and he created the Department of Public Health's Medical Reserve Corps. </p>
  
 
-<p>Mr. Durkin served as a U.S. Marine for five years, and later served in the U.S. Army for 18 years as an MH-60 Blackhawk pilot in the 1st Special Forces Group (SFG) Flight Detachment, and the elite 160th Special Operations Aviation Regiment, an element of the Army's Special Operations Command (SOCOM). During his military career, Durkin's duties included Flight Lead, Marine Corps Aviation Weapons and Tactics Instructor (WTI), Senior Operations and Plans Officer, Instructor Pilot, Platoon Leader, Electronic Warfare Officer and Air/Ground Safety Officer. He coordinated multi-service and multinational operations and training exercises worldwide. </p><br />
+<p>Mr. Durkin served as a U.S. Marine for five years, and later served in the U.S. Army for 18 years as an MH-60 Blackhawk pilot in the 1st Special Forces Group (SFG) Flight Detachment, and the elite 160th Special Operations Aviation Regiment, an element of the Army's Special Operations Command (SOCOM). During his military career, Durkin's duties included Flight Lead, Marine Corps Aviation Weapons and Tactics Instructor (WTI), Senior Operations and Plans Officer, Instructor Pilot, Platoon Leader, Electronic Warfare Officer and Air/Ground Safety Officer. He coordinated multi-service and multinational operations and training exercises worldwide. </p>
  
 <p>Before relocating to the Rochester area, he was a contractor and site director responsible for Information Technology (IT) Operations in support of U.S. Navy SEALs at Naval Amphibious Base Little Creek in Virginia. He is a decorated combat veteran, having been awarded the Legion of Merit, Bronze Star, Air Medal, Meritorious Service Medal and Master Army Aviator Badge.</p>
-</br /></br /></br />  
+
 
 
 <h2>Agamemnon Crassidis, PhD: XXXX</h2>
 
-<img src="https://media.newyorker.com/photos/59095bb86552fa0be682d9d0/master/w_2240,c_limit/Monkey-Selfie.jpg" alt="Monkey" width="200" height="300">
+<img src="images/ag.jpeg" alt="Agamemnon Crassidis" width="300" height="300">
 
 <p>Ag Stuff.</p>
 
 
-</br /></br /></br />
+
 <h2>Dan Krutz, PhD: XXXX</h2>
 
-<img src="https://media.newyorker.com/photos/59095bb86552fa0be682d9d0/master/w_2240,c_limit/Monkey-Selfie.jpg" alt="Monkey" width="200" height="300">
+<img src="images/dan.png" alt="Daniel Krutz" width="200" height="300">
 
-<p>Dan Stuff.</p>
- </br /></br /></br />
+<p>Dr. Daniel Krutz is an Associate Professor at Rochester Institute of Technology, Department of Software Engineering and Center for Cybersecurity. Krutz is the Director of the Autonomy, WARfare, and Engineering (AWARE) Lab, which supports several externally funded projects for the NSF, NSA and the DOD. Krutz is the recipient of the NSF CAREER Award (2022). Krutz received a research faculty fellowship at the US Air Force Research Laboratory (AFRL). Krutz has advised high level DOD programs in the areas of AI and strategic reasoning. He is the author of numerous AI/ML-focused publications, many of which have appeared in top tier venues.</p>
 
 
                     </div>
