--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container">
             <nav>
                 <img src="images/SOARLogo1.png" class="logo">
-                <ul id="sidememu">
+                <ul id="sidememu1">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#team">Team</a></li>
@@ -108,6 +108,8 @@
         <div class="text-box">
 <!--            <h2>Left Box with Text</h2>-->
             <p>Welcome to SOAR Intelligent Solutions.</p>
+
+            This is cool stuff
         </div>
         <div class="image-box">
             <img src="images/Blackhawk.jpeg" alt="SOAR Blackhawk">
