--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
 <!--            <h2>Left Box with Text</h2>-->
             <p>Welcome to SOAR Intelligent Solutions.</p>
 
-            This is cool stuff
+<div class="mainMessageArea">
+            Fusing Miliary, Aerospace Innovation, and AI/ML Excellence. 
+  </div>
         </div>
         <div class="image-box">
             <img src="images/Blackhawk.jpeg" alt="SOAR Blackhawk">
