--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="row">
                 <!--   <div class="about-col-1"></div> -->
                 <div class="about-col-2">
-                    <h1 class="sub-title">Team</h1>
+                    <h1 class="sub-title">Leadership Team</h1>
 
 
 <h2>Chris Durkin: CEO</h2>
