--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             height: auto;
             border-radius: 8px;
         }
-    </style>
+   </style>
 
 
 </head>
@@ -79,7 +79,10 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/SOARLogo1.png" class="logo">
+                <img src="images/SoarBlack.png" class="logo">
+<!--  <img src="images/SoarTrans2.png" class="logo"> -->
+
+
                 <ul id="sidememu1">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
