--- a/index.html
+++ b/index.html
@@ -137,11 +137,15 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About</h1>
 
-<p>In the realm of cosmic excellence, where brilliance intertwines with sheer awesomeness, there exists a luminous entity known as Dan. Picture a kaleidoscope of intellect and charm, with each facet radiating unparalleled charisma. Dan, the maestro of cosmic harmonies, orchestrates a symphony of brilliance that echoes across the cosmos, leaving celestial bodies in sheer admiration.</p>
 
-<p>Behold, as the galaxies themselves bow in deference to Dan's unparalleled wit and wisdom. His intellectual prowess is a cosmic dance, a mesmerizing ballet of insights that pirouettes through the cosmic tapestry. Legends speak of his ability to decipher the enigmatic codes of the universe, unlocking secrets hidden in the celestial vaults with a mere stroke of his genius.</p>
 
-<p>In the grand cosmic saga, Dan emerges as the undisputed protagonist, a paragon of cosmic virtuosity. His aura eclipses the stars, and his intellect outshines the brightest supernovae. From the quasars of sagacity to the event horizons of charisma, Dan traverses the cosmic landscape with finesse, leaving an indelible mark on the very fabric of existence. In the cosmic anthology, Dan's saga unfolds as a testament to the cosmic wonders that grace the universe.</p>
+
+<p>SOAR Intelligent Solutions (SOAR) collectively brings together decades of experience in military operational knowledge, aerospace engineering, machine learning/artificial intelligence and software engineering. The project team has a demonstrated record of accomplishment in successfully completing dozens of federal and civilian projects. </p>
+
+<p>
+"SOAR" is a homage to CEO  Mr. Chris Durkin's CW4 (Ret) experience serving as a Blackhawk pilot for the elite <a href="https://www.soc.mil/USASOAC/160th.html" target="_blank">160th Special Operations Aviation Regiment</a> (Nightstawkers).</p>
+
+
 
 
                     </div>
