--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <p>SOAR Intelligent Solutions (SOAR) collectively brings together decades of experience in military operational knowledge, aerospace engineering, machine learning/artificial intelligence and software engineering. The project team has a demonstrated record of accomplishment in successfully completing dozens of federal and civilian projects. </p>
 
 <p>
-"SOAR" is a homage to CEO  Mr. Chris Durkin's CW4 (Ret) experience serving as a Blackhawk pilot for the elite <a href="https://www.soc.mil/USASOAC/160th.html" target="_blank">160th Special Operations Aviation Regiment</a> (Nightstawkers).</p>
+"SOAR" is a homage to CEO  Mr. Chris Durkin's CW4 (Ret) experience serving as a Blackhawk pilot for the elite <a href="https://www.soc.mil/USASOAC/160th.html" target="_blank">160th Special Operations Aviation Regiment</a> (Night Stalkers).</p>
 
 
 
