--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/SoarBlack.png" class="logo">
+                <a href="index.html"><img src="images/SoarBlack.png" class="logo" alt="Soar Intelligent Solutions"></a>
 <!--  <img src="images/SoarTrans2.png" class="logo"> -->
 
 
@@ -175,9 +175,9 @@
 
 <p>Mr. Durkin served as the Washington, D.C. Strategic National Stockpile (SNS) Coordinator where he was responsible for developing a strategy to dispense emergency medication to the District of Columbia's more than one million residents and guests within 48 hours should a bioterrorism event occur involving anthrax or other lethal agents.</p>
   
-<p>In the private sector, Mr. Durkin was a senior emergency management consultant specializing in traditional and public health emergency and disaster prevention, mitigation, preparedness, response and recovery. While working closely with a wide array of clients, he conducted hazard vulnerability assessments (HVA), culture and climate surveys, Clery reviews, emergency plan review, emergency plan development risk assessments and developed Comprehensive Emergency Management Programs (CEMP). He also validated policies, plans and procedures using HSEEP compliant discussion and operations-based exercises.</p>
+<p>In the private sector, Mr. Durkin was a senior emergency management consultant specializing in traditional and public health emergency and disaster prevention, mitigation, preparedness, response and recovery. While working closely with a wide array of clients, he conducted hazard vulnerability assessments (HVA), culture and climate surveys, Clery reviews, emergency plan review, emergency plan development risk assessments and developed Comprehensive Emergency Management Programs (CEMP). He also validated policies, plans and procedures using HSEEP compliant discussion and operations-based exercises.</p
 
-<p>Before that, he was the SNS Coordinator and Public Health Emergency Operations and Plans Officer for the Monroe County Department of Health in New York. He supervised a staff of preparedness specialists and provided leadership during the development of the Civil Preparedness Initiative (CPI), which teamed the Department of Health with all municipalities in Monroe County, including the City of Rochester. During this period, he oversaw numerous tabletop, functional and full-scale exercises. Additionally, Mr. Durkin was co-chair of the Community of Monroe Citizen Corps Council, he developed the Monroe County Community Emergency Response Team (CERT) Program, and he created the Department of Public Health's Medical Reserve Corps. </p>
+<p>Mr. Durkin has served as the SNS Coordinator and Public Health Emergency Operations and Plans Officer for the Monroe County Department of Health in New York. He supervised a staff of preparedness specialists and provided leadership during the development of the Civil Preparedness Initiative (CPI), which teamed the Department of Health with all municipalities in Monroe County, including the City of Rochester. During this period, he oversaw numerous tabletop, functional and full-scale exercises. Additionally, Mr. Durkin was co-chair of the Community of Monroe Citizen Corps Council, he developed the Monroe County Community Emergency Response Team (CERT) Program, and he created the Department of Public Health's Medical Reserve Corps. </p>
  
 
 <p>Mr. Durkin served as a U.S. Marine for five years, and later served in the U.S. Army for 18 years as an MH-60 Blackhawk pilot in the 1st Special Forces Group (SFG) Flight Detachment, and the elite 160th Special Operations Aviation Regiment, an element of the Army's Special Operations Command (SOCOM). During his military career, Durkin's duties included Flight Lead, Marine Corps Aviation Weapons and Tactics Instructor (WTI), Senior Operations and Plans Officer, Instructor Pilot, Platoon Leader, Electronic Warfare Officer and Air/Ground Safety Officer. He coordinated multi-service and multinational operations and training exercises worldwide. </p>
