--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 - Register domain
 - Fix paragraph spacing
 - Add Dan/Ag bios
+
+- Perhaps add something about hiring
+
 -->
 
 <!DOCTYPE html>
@@ -117,7 +120,7 @@
   </div>
         </div>
         <div class="image-box">
-            <img src="images/Blackhawk.jpeg" alt="SOAR Blackhawk">
+            <img src="images/Blackhawk.jpeg" alt="SOAR Intelligent Solutions">
         </div>
     </div>
 
@@ -140,11 +143,16 @@
 
 
 
-<p>SOAR Intelligent Solutions (SOAR) collectively brings together decades of experience in military operational knowledge, aerospace engineering, machine learning/artificial intelligence and software engineering. The project team has a demonstrated record of accomplishment in successfully completing dozens of federal and civilian projects. </p>
+<p>SOAR Intelligent Solutions, LLC (SOAR) collectively brings together decades of experience in military operational knowledge, aerospace engineering, machine learning/artificial intelligence and software engineering. The project team has a demonstrated record of accomplishment in successfully completing dozens of federal and civilian projects. </p>
 
 <p>
 "SOAR" is a homage to CEO  Mr. Chris Durkin's CW4 (Ret) experience serving as a Blackhawk pilot for the elite <a href="https://www.soc.mil/USASOAC/160th.html" target="_blank">160th Special Operations Aviation Regiment</a> (Night Stalkers).</p>
 
+
+<!--
+Perhaps add strategic partership stuff like NUAIr
+
+-->
 
 
 
@@ -168,10 +176,13 @@
                     <h1 class="sub-title">Leadership Team</h1>
 
 
-<h2>Chris Durkin: CEO</h2>
+<h2>Chris Durkin: President, CEO</h2>
 
 
 <img src="images/chris.png" alt="Chris Durkin" width="200" height="300">
+
+
+<p>Mr Durkin is a retired 23-year veteran of both the U.S. Marine Corps and U.S. Army.</p>
 
 <p>Mr. Durkin served as the Washington, D.C. Strategic National Stockpile (SNS) Coordinator where he was responsible for developing a strategy to dispense emergency medication to the District of Columbia's more than one million residents and guests within 48 hours should a bioterrorism event occur involving anthrax or other lethal agents.</p>
   
@@ -180,21 +191,21 @@
 <p>Mr. Durkin has served as the SNS Coordinator and Public Health Emergency Operations and Plans Officer for the Monroe County Department of Health in New York. He supervised a staff of preparedness specialists and provided leadership during the development of the Civil Preparedness Initiative (CPI), which teamed the Department of Health with all municipalities in Monroe County, including the City of Rochester. During this period, he oversaw numerous tabletop, functional and full-scale exercises. Additionally, Mr. Durkin was co-chair of the Community of Monroe Citizen Corps Council, he developed the Monroe County Community Emergency Response Team (CERT) Program, and he created the Department of Public Health's Medical Reserve Corps. </p>
  
 
-<p>Mr. Durkin served as a U.S. Marine for five years, and later served in the U.S. Army for 18 years as an MH-60 Blackhawk pilot in the 1st Special Forces Group (SFG) Flight Detachment, and the elite 160th Special Operations Aviation Regiment, an element of the Army's Special Operations Command (SOCOM). During his military career, Durkin's duties included Flight Lead, Marine Corps Aviation Weapons and Tactics Instructor (WTI), Senior Operations and Plans Officer, Instructor Pilot, Platoon Leader, Electronic Warfare Officer and Air/Ground Safety Officer. He coordinated multi-service and multinational operations and training exercises worldwide. </p>
+<p>Mr. Durkin served as a U.S. Marine for five years, and later served in the U.S. Army for 18 years as an MH-60 Blackhawk pilot in the 1st Special Forces Group (SFG) Flight Detachment, and the elite 160th Special Operations Aviation Regiment, an element of the Army's Special Operations Command (SOCOM). During his military career, Durkin's duties included Flight Lead, Marine Corps Aviation Weapons and Tactics Instructor (WTI), Senior Operations and Plans Officer, Instructor Pilot, Platoon Leader, Electronic Warfare Officer and Air/Ground Safety Officer, attaining the rank of CW4. He coordinated multi-service and multinational operations and training exercises worldwide. </p>
  
 <p>Before relocating to the Rochester area, he was a contractor and site director responsible for Information Technology (IT) Operations in support of U.S. Navy SEALs at Naval Amphibious Base Little Creek in Virginia. He is a decorated combat veteran, having been awarded the Legion of Merit, Bronze Star, Air Medal, Meritorious Service Medal and Master Army Aviator Badge.</p>
 
 
 
-<h2>Agamemnon Crassidis, PhD: XXXX</h2>
+<h2>Agamemnon Crassidis, PhD: Vice President</h2>
 
 <img src="images/ag.jpeg" alt="Agamemnon Crassidis" width="300" height="300">
 
-<p>Ag Stuff.</p>
+<p>Dr. Crassidis is a Professor at the Rochester Institute of Technology (RIT) in the Department of Mechanical Engineering. He has more than 20 years of industrial experience in the areas control, and measurements systems.</p>
 
 
 
-<h2>Dan Krutz, PhD: XXXX</h2>
+<h2>Dan Krutz, PhD: Vice President, Chief Technology Officer</h2>
 
 <img src="images/dan.png" alt="Daniel Krutz" width="200" height="300">
 
@@ -264,12 +275,10 @@
 
 
         <div class="copyright">
-            <p>Copyright © 2024 SOAR Intelligent Solutions.</p>
+            <p>Copyright © 2024 SOAR Intelligent Solutions, LLC.</p>
+            <p>Veteran Owned and Operated</p>
         </div>
     </div>
-
-
-
 </body>
 
 </html>
