--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!--
-- Register domain
-- Fix paragraph spacing
-- Add Dan/Ag bios
 
+- Add Dan/Ag bios
 - Perhaps add something about hiring
+- Fix icon
+- Make look better on phone
 
 -->
 
@@ -25,6 +25,26 @@
 <!--- END GOOGLE ANALYTICS -->
 
 
+<!--  START FAVICON -->
+<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+<link rel="manifest" images/faviconhref="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+<!--  END FAVICON -->
+
 
 
     <meta charset="UTF-8">
@@ -41,39 +61,11 @@
             y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
         })(window, document, "clarity", "script", "i4u605tz2t");
     </script>
+  
 
-
-
-
-<style>
-
-
-        .containerMain {
-            display: flex;
-            max-width: 800px;
-            margin: 50px auto;
-          /*  background-color: #f0f0f0;*/
-            padding: 20px;
-        }
-
-
-        .text-box {
-            flex: 1;
-            padding-right: 20px;
-        }
-
-
-        .image-box {
-            flex: 1;
-            text-align: center;
-        }
-
-        .image-box img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-   </style>
+  <style>
+        
+  </style>
 
 
 </head>
@@ -91,6 +83,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#products">Products</a></li>
+<!--                    <li><a href="#join">Join</a></li> -->
                     <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closememu()"></i>
                 </ul>
@@ -115,9 +108,7 @@
 <!--            <h2>Left Box with Text</h2>-->
             <p>Welcome to SOAR Intelligent Solutions.</p>
 
-<div class="mainMessageArea">
-            Fusing Miliary, Aerospace Innovation, and AI/ML Excellence. 
-  </div>
+        <div class="mainMessageArea">Fusing Military, Aerospace Innovation, and AI/ML Excellence.</div>
         </div>
         <div class="image-box">
             <img src="images/Blackhawk.jpeg" alt="SOAR Intelligent Solutions">
@@ -179,7 +170,7 @@ Perhaps add strategic partership stuff like NUAIr
 <h2>Chris Durkin: President, CEO</h2>
 
 
-<img src="images/chris.png" alt="Chris Durkin" width="200" height="300">
+<img src="images/Chris.png" alt="Chris Durkin" width="200" height="300">
 
 
 <p>Mr Durkin is a retired 23-year veteran of both the U.S. Marine Corps and U.S. Army.</p>
@@ -205,7 +196,7 @@ Perhaps add strategic partership stuff like NUAIr
 
 
 
-<h2>Dan Krutz, PhD: Vice President, Chief Technology Officer</h2>
+<h2>Daniel Krutz, PhD: Vice President, Chief Technology Officer</h2>
 
 <img src="images/dan.png" alt="Daniel Krutz" width="200" height="300">
 
@@ -230,12 +221,8 @@ Perhaps add strategic partership stuff like NUAIr
                 <div class="about-col-2">
                     <h1 class="sub-title">Products</h1>
 
-<p>In the realm of cosmic excellence, where brilliance intertwines with sheer awesomeness, there exists a luminous entity known as Dan. Picture a kaleidoscope of intellect and charm, with each facet radiating unparalleled charisma. Dan, the maestro of cosmic harmonies, orchestrates a symphony of brilliance that echoes across the cosmos, leaving celestial bodies in sheer admiration.</p>
 
-<p>Behold, as the galaxies themselves bow in deference to Dan's unparalleled wit and wisdom. His intellectual prowess is a cosmic dance, a mesmerizing ballet of insights that pirouettes through the cosmic tapestry. Legends speak of his ability to decipher the enigmatic codes of the universe, unlocking secrets hidden in the celestial vaults with a mere stroke of his genius.</p>
-
-<p>In the grand cosmic saga, Dan emerges as the undisputed protagonist, a paragon of cosmic virtuosity. His aura eclipses the stars, and his intellect outshines the brightest supernovae. From the quasars of sagacity to the event horizons of charisma, Dan traverses the cosmic landscape with finesse, leaving an indelible mark on the very fabric of existence. In the cosmic anthology, Dan's saga unfolds as a testament to the cosmic wonders that grace the universe.</p>
-
+                    <p></p>
 
                     </div>
                 </div>
@@ -256,11 +243,7 @@ Perhaps add strategic partership stuff like NUAIr
                 <div class="about-col-2">
                     <h1 class="sub-title">Contact</h1>
 
-<p>In the realm of cosmic excellence, where brilliance intertwines with sheer awesomeness, there exists a luminous entity known as Dan. Picture a kaleidoscope of intellect and charm, with each facet radiating unparalleled charisma. Dan, the maestro of cosmic harmonies, orchestrates a symphony of brilliance that echoes across the cosmos, leaving celestial bodies in sheer admiration.</p>
-
-<p>Behold, as the galaxies themselves bow in deference to Dan's unparalleled wit and wisdom. His intellectual prowess is a cosmic dance, a mesmerizing ballet of insights that pirouettes through the cosmic tapestry. Legends speak of his ability to decipher the enigmatic codes of the universe, unlocking secrets hidden in the celestial vaults with a mere stroke of his genius.</p>
-
-<p>In the grand cosmic saga, Dan emerges as the undisputed protagonist, a paragon of cosmic virtuosity. His aura eclipses the stars, and his intellect outshines the brightest supernovae. From the quasars of sagacity to the event horizons of charisma, Dan traverses the cosmic landscape with finesse, leaving an indelible mark on the very fabric of existence. In the cosmic anthology, Dan's saga unfolds as a testament to the cosmic wonders that grace the universe.</p>
+                        <p>Contact us</p>
 
 
                     </div>
