--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   
 
   <style>
-        
+    /* Style for the main list */
+    
   </style>
 
 
@@ -187,6 +188,12 @@ Perhaps add strategic partership stuff like NUAIr
 <p>Before relocating to the Rochester area, he was a contractor and site director responsible for Information Technology (IT) Operations in support of U.S. Navy SEALs at Naval Amphibious Base Little Creek in Virginia. He is a decorated combat veteran, having been awarded the Legion of Merit, Bronze Star, Air Medal, Meritorious Service Medal and Master Army Aviator Badge.</p>
 
 
+<a href="mailto:cdurking@soarInnovativeSolutions.com" target="_blank">cdurkin@soarInnovativeSolutions.com</a>
+
+
+<p></p>
+<p></p>
+
 
 <h2>Agamemnon Crassidis, PhD: Vice President</h2>
 
@@ -222,7 +229,22 @@ Perhaps add strategic partership stuff like NUAIr
                     <h1 class="sub-title">Products</h1>
 
 
-                    <p></p>
+                    <p>Through our team and partnerships, SOAR offers a variety of services, including:
+
+<ul>
+<li>Consulting Services</li>
+  <ul>
+      <li>Artificial Intelligence</li>
+      <li>Machine Learning</li>
+      <li>Aerospace</li> 
+      <li>Cybersecurity</li>
+      <li> Software Development</li>
+      <li>Military Operational knowledge</li>
+  </ul>
+<li>Emergency Preparedness Management</li>
+</ul>
+
+</p>
 
                     </div>
                 </div>
