--- a/index.html
+++ b/index.html
@@ -65,7 +65,40 @@
 
   <style>
     /* Style for the main list */
-    
+    ul {
+      
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Style for list items in the main list */
+    li {
+      margin-left: 20px; /* Adjust the value to control the indentation */
+      position: relative;
+    }
+
+    /* Style for the sublist */
+    ul ul {
+      margin-left: 20px; /* Adjust the value to control the indentation */
+    }
+
+    /* Style for list items in the sublist */
+    ul ul li {
+      margin-left: 20px; /* Adjust the value to control the indentation */
+      position: relative;
+    }
+
+    /* Style for normal links */
+    a {
+      color: blue; /* Set the default color of the links */
+      text-decoration: none; /* Remove underline for better styling */
+      transition: color 0.3s; /* Add a smooth transition effect for color change */
+    }
+
+    /* Style for links when hovered over */
+    a:hover {
+      color: red; /* Set the color for the links when hovered over */
+    }
   </style>
 
 
@@ -174,7 +207,8 @@ Perhaps add strategic partership stuff like NUAIr
 <img src="images/Chris.png" alt="Chris Durkin" width="200" height="300">
 
 
-<p>Mr Durkin is a retired 23-year veteran of both the U.S. Marine Corps and U.S. Army.</p>
+<p>Mr. Durkin is a master army aviator and retired 23 year veteran of both the US Marine Corps and US Army Special Operations Command (SOCOM).</p>
+
 
 <p>Mr. Durkin served as the Washington, D.C. Strategic National Stockpile (SNS) Coordinator where he was responsible for developing a strategy to dispense emergency medication to the District of Columbia's more than one million residents and guests within 48 hours should a bioterrorism event occur involving anthrax or other lethal agents.</p>
   
@@ -188,7 +222,7 @@ Perhaps add strategic partership stuff like NUAIr
 <p>Before relocating to the Rochester area, he was a contractor and site director responsible for Information Technology (IT) Operations in support of U.S. Navy SEALs at Naval Amphibious Base Little Creek in Virginia. He is a decorated combat veteran, having been awarded the Legion of Merit, Bronze Star, Air Medal, Meritorious Service Medal and Master Army Aviator Badge.</p>
 
 
-<a href="mailto:cdurking@soarInnovativeSolutions.com" target="_blank">cdurkin@soarInnovativeSolutions.com</a>
+Contact: <a href="mailto:cdurkin@soarInnovativeSolutions.com" target="_blank">cdurkin@soarInnovativeSolutions.com</a>
 
 
 <p></p>
@@ -199,8 +233,14 @@ Perhaps add strategic partership stuff like NUAIr
 
 <img src="images/ag.jpeg" alt="Agamemnon Crassidis" width="300" height="300">
 
-<p>Dr. Crassidis is a Professor at the Rochester Institute of Technology (RIT) in the Department of Mechanical Engineering. He has more than 20 years of industrial experience in the areas control, and measurements systems.</p>
+<p>Dr. Crassidis is a Professor at the Rochester Institute of Technology (RIT), Department of Mechanical Engineering. He has more than 20 years of industrial experience in the areas control, and measurements systems.</p>
 
+
+
+Contact: <a href="mailto:acrassidis@soarintelligentsolutions.com;" target="_blank">acrassidis@soarintelligentsolutions.com</a>
+
+<p></p>
+<p></p>
 
 
 <h2>Daniel Krutz, PhD: Vice President, Chief Technology Officer</h2>
@@ -210,6 +250,11 @@ Perhaps add strategic partership stuff like NUAIr
 <p>Dr. Daniel Krutz is an Associate Professor at Rochester Institute of Technology, Department of Software Engineering and Center for Cybersecurity. Krutz is the Director of the Autonomy, WARfare, and Engineering (AWARE) Lab, which supports several externally funded projects for the NSF, NSA and the DOD. Krutz is the recipient of the NSF CAREER Award (2022). Krutz received a research faculty fellowship at the US Air Force Research Laboratory (AFRL). Krutz has advised high level DOD programs in the areas of AI and strategic reasoning. He is the author of numerous AI/ML-focused publications, many of which have appeared in top tier venues.</p>
 
 
+
+Contact: <a href="mailto:dkrutz@soarInnovativeSolutions.com" target="_blank">dkrutz@soarInnovativeSolutions.com</a>
+
+<p></p>
+<p></p>
                     </div>
                 </div>
             </div>
@@ -232,7 +277,7 @@ Perhaps add strategic partership stuff like NUAIr
                     <p>Through our team and partnerships, SOAR offers a variety of services, including:
 
 <ul>
-<li>Consulting Services</li>
+<li>Consulting</li>
   <ul>
       <li>Artificial Intelligence</li>
       <li>Machine Learning</li>
@@ -242,6 +287,7 @@ Perhaps add strategic partership stuff like NUAIr
       <li>Military Operational knowledge</li>
   </ul>
 <li>Emergency Preparedness Management</li>
+<li>Software Development</li>
 </ul>
 
 </p>
@@ -266,7 +312,7 @@ Perhaps add strategic partership stuff like NUAIr
                     <h1 class="sub-title">Contact</h1>
 
                         <p>Contact us</p>
-
+                        <a href="mailto:cdurkin@soarInnovativeSolutions.com" target="_blank">cdurkin@soarInnovativeSolutions.com</a>
 
                     </div>
                 </div>
