--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ Perhaps add strategic partership stuff like NUAIr
 <p>Before relocating to the Rochester area, he was a contractor and site director responsible for Information Technology (IT) Operations in support of U.S. Navy SEALs at Naval Amphibious Base Little Creek in Virginia. He is a decorated combat veteran, having been awarded the Legion of Merit, Bronze Star, Air Medal, Meritorious Service Medal and Master Army Aviator Badge.</p>
 
 
-Contact: <a href="mailto:cdurkin@soarInnovativeSolutions.com" target="_blank">cdurkin@soarInnovativeSolutions.com</a>
+Contact: <a href="mailto:cdurkin@soarintelligentsolutions.com" target="_blank">cdurkin@soarintelligentsolutions.com</a>
 
 
 <p></p>
@@ -251,7 +251,7 @@ Contact: <a href="mailto:acrassidis@soarintelligentsolutions.com;" target="_blan
 
 
 
-Contact: <a href="mailto:dkrutz@soarInnovativeSolutions.com" target="_blank">dkrutz@soarInnovativeSolutions.com</a>
+Contact: <a href="mailto:dkrutz@soarintelligentsolutions.com" target="_blank">dkrutz@soarintelligentsolutions.com</a>
 
 <p></p>
 <p></p>
@@ -312,7 +312,7 @@ Contact: <a href="mailto:dkrutz@soarInnovativeSolutions.com" target="_blank">dkr
                     <h1 class="sub-title">Contact</h1>
 
                         <p>Contact us</p>
-                        <a href="mailto:cdurkin@soarInnovativeSolutions.com" target="_blank">cdurkin@soarInnovativeSolutions.com</a>
+                        <a href="mailto:cdurkin@soarintelligentsolutions.com" target="_blank">cdurkin@soarintelligentsolutions.com</a>
 
                     </div>
                 </div>
