--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#team">Team</a></li>
-                    <li><a href="#products">Products</a></li>
+                    <li><a href="#services">Services</a></li>
 <!--                    <li><a href="#join">Join</a></li> -->
                     <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closememu()"></i>
@@ -171,7 +171,7 @@
 <p>SOAR Intelligent Solutions, LLC (SOAR) collectively brings together decades of experience in military operational knowledge, aerospace engineering, machine learning/artificial intelligence and software engineering. The project team has a demonstrated record of accomplishment in successfully completing dozens of federal and civilian projects. </p>
 
 <p>
-"SOAR" is a homage to CEO  Mr. Chris Durkin's CW4 (Ret) experience serving as a Blackhawk pilot for the elite <a href="https://www.soc.mil/USASOAC/160th.html" target="_blank">160th Special Operations Aviation Regiment</a> (Night Stalkers).</p>
+"SOAR" is a homage to CEO  Mr. Chris Durkin's CW4 (Ret) experience serving as a Blackhawk pilot for the elite <a href="https://www.soc.mil/USASOAC/160th.html" target="_blank">160th Special Operations Aviation Regiment</a> or 'SOAR' (Night Stalkers).</p>
 
 
 <!--
@@ -266,12 +266,12 @@ Contact: <a href="mailto:dkrutz@soarintelligentsolutions.com" target="_blank">dk
 
 
  <!-- --------Products-------->
-    <div id="products">
+    <div id="services">
         <div class="container">
             <div class="row">
                 <!--   <div class="about-col-1"></div> -->
                 <div class="about-col-2">
-                    <h1 class="sub-title">Products</h1>
+                    <h1 class="sub-title">Services</h1>
 
 
                     <p>Through our team and partnerships, SOAR offers a variety of services, including:
