--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <a href="index.html"><img src="images/SoarBlack.png" class="logo" alt="Soar Intelligent Solutions"></a>
+                <a href="index.html"><img src="images/SoarBlack2.png" class="logo" alt="Soar Intelligent Solutions"></a>
 <!--  <img src="images/SoarTrans2.png" class="logo"> -->
 
 
