--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <div id="header">
         <div class="container">
             <nav>
-                <a href="index.html"><img src="images/SoarBlack2.png" class="logo" alt="Soar Intelligent Solutions"></a>
-<!--  <img src="images/SoarTrans2.png" class="logo"> -->
+              <!--  <a href="index.html"><img src="images/SoarBlack2.png" class="logo" alt="Soar Intelligent Solutions"></a>-->
+  <img src="images/SoarBlack2.png" class="logo">
 
 
                 <ul id="sidememu1">
