--- a/index.html
+++ b/index.html
@@ -66,6 +66,362 @@
   <style>
 
 
+    /* Style for the main list */
+    ul {
+      
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Style for list items in the main list */
+    li {
+      margin-left: 20px; /* Adjust the value to control the indentation */
+      position: relative;
+    }
+
+    /* Style for the sublist */
+    ul ul {
+      margin-left: 20px; /* Adjust the value to control the indentation */
+    }
+
+    /* Style for list items in the sublist */
+    ul ul li {
+      margin-left: 20px; /* Adjust the value to control the indentation */
+      position: relative;
+    }
+
+    /* Style for normal links */
+    a {
+      color: blue; /* Set the default color of the links */
+      text-decoration: none; /* Remove underline for better styling */
+      transition: color 0.3s; /* Add a smooth transition effect for color change */
+    }
+
+    /* Style for links when hovered over */
+    a:hover {
+      color: red; /* Set the color for the links when hovered over */
+    }
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins',sans-serif;
+/*    box-sizing: border-box;*/
+}
+
+p:after { /* Add spacing after each paragraph*/
+    content: "\00a0"; /* Unicode character for non-breaking space */
+    display: block;
+    white-space: pre; /* Preserve whitespace */
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
+body{
+    background: white;
+    color: grey;
+}
+
+.containerMain {
+            display: flex;
+            max-width: 800px;
+            margin: 50px auto;
+          /*  background-color: #f0f0f0;*/
+            padding: 20px;
+        }
+
+        .text-box {
+            flex: 1;
+            padding-right: 20px;
+        }
+
+        .image-box {
+            flex: 1;
+            text-align: center;
+        }
+
+        .image-box img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+
+
+#header{
+    width: 100%;
+   /* height: 110vh;*/ /* change here */
+/*    background-image: url(images/ok_4.jpg);*/
+    /* background-size: cover;
+    background-position: center; */
+    /*
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 80%;
+*/
+}
+@keyframes fadeInUp {
+    from {
+        transform: translate3d(0,40px,0)
+    }
+
+    to {
+        transform: translate3d(0,0,0);
+        opacity: 1
+    }
+}
+@-webkit-keyframes fadeInUp {
+    from {
+        transform: translate3d(0,100px,0)
+    }
+
+    to {
+        transform: translate3d(0,0,0);
+        opacity: 1
+    }
+}
+.animated {
+    animation-duration: 2.5s;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 2.5s;
+    -webkit-animation-fill-mode: both
+}
+
+.animatedFadeInUp {
+    opacity: 0
+}
+
+.fadeInUp {
+    opacity: 0;
+    animation-name: fadeInUp;
+    -webkit-animation-name: fadeInUp;
+}
+
+
+
+.container{
+/*    padding: 10px 10%; */
+    /* padding: 0px 10%; */
+/*    margin-top: 10%;*/
+}
+
+nav{
+    display: flex;
+    align-items: center;
+/*    justify-content: space-between;*/
+justify-content: center;
+    flex-wrap: wrap;
+    background: black;
+    
+
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: black; /* Adjust the background color as needed */
+    padding: 10px; /* Add padding for better visibility */
+    z-index: 1000; /* Ensure it stays on top of other elements */
+
+
+}
+
+.mainMessageArea{ /* Information shown at the top of the page under the main title */
+    font-size: 15px;
+}
+
+.logo{
+    width: 100px;
+}
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translateX(300px);
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+
+
+
+
+.header-text{
+/*    margin-top: 20%;*/
+    font-size: 30px;
+    padding-top: 10%; /*Amount of space between the header and top text*/
+}
+.header-text h1{
+    font-size: 60px;
+    margin-top: 20px;
+
+}
+.header-text h1 span{
+    background: linear-gradient(to right, rgba(255,0,79,1) 38%, rgba(64,88,205,1) 77%);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+
+}
+/* -------about-------- */
+
+
+#about{
+    color: #ababab;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-col-1{
+    flex-basis: 35%;
+}
+.about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+.about-col-2{
+    flex-basis: 70%; /* Was 60 */
+    padding-left: 15%; /*How far to push margin from the left*/
+}
+.sub-title{
+    font-size: 60px;
+    font-weight: 600;
+     color: black; 
+/*    background: linear-gradient(90deg, rgb(154, 59, 218) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+    */
+}
+
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: #262626;
+    font-weight: 300;
+    margin-top: 20px;
+}
+.copyright i{
+    color: #ff004f;
+}
+/* ------css for small screen------ */
+
+
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+    animation: fadeInRight 1s ease-in-out;
+}
+
+
+nav ul li a{
+/*    color: #fff;*/
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
+}
+nav ul li a::after{
+    content: '';
+    width: 0%;
+    height: 3px;
+    background: #ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+nav ul li a:hover::after{
+    width: 100%;
+}
+
+
+nav .fa-solid{
+    display: none;
+}
+@media only screen and (max-width: 600px){
+    #header{
+/*        background-image: url(images/back_new.jpg); */
+    }
+    .header-text{
+        /* margin-top: 670px;
+        font-size: 16px; */
+/*        margin-top: 450px;*/
+        font-size: 25px;
+    }
+    .header-text h1{
+        font-size: 45px;
+    }
+    .header-text h1 span{
+        background: linear-gradient(to right, rgba(255,0,79,1) 38%, rgb(23, 55, 218) 77%);
+      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text;
+    }
+    nav .fa-solid{
+        display: block;
+        font-size: 25px;
+    }
+    nav ul{
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul .fa-solid{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+    .sub-title{
+        font-size: 40px
+    }
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+    .about-col-1{
+        margin-bottom: 30px;
+    }
+    .about-col-2{
+        font-size: 14px;
+    }
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
+    .copyright{
+        font-size: 14px;
+    }
+    #header{
+        width: 100%;
+/*        height: 110vh; *//* change here */
+        /* background-size: cover; */
+        /* background-position: center; */
+        background-size: 110%;
+    }
+
+
+
+
+
 
 
 
@@ -82,7 +438,7 @@
   <img src="images/SoarBlack2.png" class="logo">
 
 
-                <ul id="sidememu1">
+                <ul id="sidememu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#team">Team</a></li>
@@ -279,10 +635,12 @@ Contact: <a href="mailto:dkrutz@soarintelligentsolutions.com" target="_blank">dk
             <div class="row">
                 <!--   <div class="about-col-1"></div> -->
                 <div class="about-col-2">
-                    <h1 class="sub-title">Contact</h1>
+                    <h1 class="sub-title">Contact Us</h1>
 
-                        <p>Contact us</p>
+                      <!--  <p>Contact us</p>-->
+                      <p>
                         <a href="mailto:cdurkin@soarintelligentsolutions.com" target="_blank">cdurkin@soarintelligentsolutions.com</a>
+                      </p>
 
                     </div>
                 </div>
